# 3d-print-analyser

./: CMakeLists.txt  best_practices.md
.cursor/rules/: cad-development-workflow.mdc
.cursor/skills/cad-architecture-doc-review/: SKILL.md
.cursor/skills/cad-architecture-solid-dry/: SKILL.md
.cursor/skills/cad-cpp-performance-opengl/: SKILL.md
.cursor/skills/cad-cross-platform-cmake/: SKILL.md
.cursor/skills/cad-feature-workflow/: SKILL.md
.cursor/skills/cad-naming-style/: SKILL.md
.github/workflows/: windows-release.yml
documentation/: Architecture_Analysis.md  Architecture_Camera.md  Architecture_FileImport.md  Architecture_FullSystem.md  Architecture_Input.md  Architecture_Renderer.md  Architecture_Scene.md  Architecture_TouchTrackpad_Gestures.md  Architecture_UI.md  Architecture_UIDirectAccess.md  TODO
documentation/debug/: Architecture_SessionLogger.md
documentation/implementations/: Prereq_Gap_And_Background.md  RootPanel_Subtitle.md  analysis_async_incremental_rebuild_identity_2026-04-29.md  analysis_calibrate_processing_cards_2026-04-29.md  camera_orbit_continuity_2026-04-28.md  camera_orbit_dual_chart_2026-04-28.md  camera_orbit_preserve_roll_2026-04-28.md  full_scene_invalidation_graph_2026-04-29.md  input_viewport_nav_drag_over_ui_2026-04-28.md  scene_dirty_update_architecture_2026-04-29.md  stl_import_timing_breakdown_2026-04-29.md  trackpad_two_finger_pan_reliability_2026-04-28.md  ui_settings_toolbar_refinements_2026-04-28.md  viewport_ui_refinements_2026-04-28.md
include/: GeometryExperiments.hpp  ProjectionDepthMode.hpp  RenderingExperiments.hpp  UserTuning.hpp  ViewportDepthExperiments.hpp
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
practices/: best_practices.md
src/: main.cpp
src/display/: display.cpp  display.hpp
src/display/rendering/: CalibPickSegments.cpp  CalibPickSegments.hpp  ScenePick.cpp  ScenePick.hpp  color.cpp  color.hpp
src/display/rendering/AnalysisRenderer/: AnalysisRenderer.cpp  AnalysisRenderer.hpp
src/display/rendering/AnalysisRenderer/shaders/: analysis.vert
src/display/rendering/Camera/: camera.cpp  camera.hpp
src/display/rendering/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/display/rendering/OpenGL/shaders/: OpenGLShader.cpp  basic.frag  basic.vert  line.frag  line.geom  line.vert
src/display/rendering/SceneRenderer/: SceneRenderer.cpp  SceneRenderer.hpp  color.cpp  color.hpp
src/display/rendering/SceneRenderer/Patch/: patch.cpp  patch.hpp
src/display/rendering/SceneRenderer/RenderBuffer/: RenderBuffer.cpp  RenderBuffer.hpp
src/display/rendering/SceneRenderer/Wireframe/: Wireframe.cpp  Wireframe.hpp
src/display/rendering/SceneRenderer/shaders/: basic.vert
src/display/rendering/UIRenderer/: Button.hpp  Icons.hpp  Panel.hpp  PanelGrid.hpp  TextRenderer.cpp  TextRenderer.hpp  ToolPanel.cpp  ToolPanel.hpp  UIGrid.hpp  UIRenderer.cpp  UIRenderer.hpp  UIStyle.hpp
src/display/rendering/UIRenderer/shaders/: text.frag  ui.vert
src/display/rendering/ViewportRenderer/: ViewportRenderer.cpp  ViewportRenderer.hpp
src/input/: FileImport.cpp  FileImport.hpp  Input.cpp  Input.hpp
src/logic/: Analysis.cpp  Analysis.hpp
src/logic/Analysis/: Analysis.cpp  Analysis.hpp  AnalysisTypes.hpp
src/logic/Analysis/Bridging/: Bridging.cpp  Bridging.hpp
src/logic/Analysis/Overhang/: Overhang.cpp  Overhang.hpp
src/logic/Analysis/SharpCorner/: SharpCorner.cpp  SharpCorner.hpp
src/logic/Analysis/SmallFeature/: SmallFeature.cpp  SmallFeature.hpp
src/logic/Analysis/Stringing/: Stringing.cpp  Stringing.hpp
src/logic/Analysis/ThinSection/: ThinSection.cpp  ThinSection.hpp
src/logic/Analysis/utils/: Slice.cpp  Slice.hpp
src/logic/Calibrate/: CalibCompensation.cpp  CalibCompensation.hpp  CalibDistanceType.cpp  CalibDistanceType.hpp  CalibNominal.cpp  CalibNominal.hpp
src/logic/Import/: OBJImport.cpp  OBJImport.hpp  STLImport.cpp  STLImport.hpp  ThreeMFImport.cpp  ThreeMFImport.hpp
src/scene/: Id.hpp  scene.cpp  scene.hpp
src/scene/Geometry/: AllGeometry.hpp  Curve.cpp  Curve.hpp  Edge.hpp  Face.cpp  Face.hpp  Geometry.hpp  OrientedEdge.hpp  Point.hpp  Solid.hpp  Surface.hpp
src/scene/Goemetry/: AllGeometry.hpp  Curve.hpp  Edge.hpp  Face.hpp  Geometry.hpp  Point.hpp  Solid.hpp
src/utils/: MainThreadPipeline.hpp  SessionLogger.cpp  SessionLogger.hpp  Settings.cpp  Settings.hpp  SystemAccent.hpp  SystemAccent.mm  SystemAppearance.hpp  SystemAppearance.mm  TaskRunner.hpp  clock.cpp  clock.hpp  log.cpp  log.hpp  utils.hpp
